Add provider_info to record
Co-authored-by: Brian Newsom <brian.l.newsom@gmail.com>